Created working new post page

--- a/src/Publicator.Presentation/ClientApp/src/index.css
+++ b/src/Publicator.Presentation/ClientApp/src/index.css
@@ -1,11 +1,24 @@
 body{
     font-family: 'Lato', sans-serif;
 }
+#wrapper{
+    background-color: ghostwhite;
+}
 .btn:focus {
     outline: none;
-  }
+}
+.myElement{
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    text-rendering: optimizeLegibility;
+}
 .router-link{
     margin: 0;
     padding: 0;
     border: 0;
+}
+#editor{
+    border: black 13 solid;
+    padding-top: 10px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
